--- a/assets/scss/pages/blog.scss
+++ b/assets/scss/pages/blog.scss
@@ -9,10 +9,17 @@
 main {
     display: grid;
     gap: space(6);
+    grid-template-areas:    "header header"
+                            "nav nav"
+                            "section section";
     
     h1 {
         text-align: center;
         margin-bottom: space(6)
+    }
+
+    nav {
+        text-align: center
     }
 
     section {
